# rl-framework

./: .pre-commit-config.yaml  README.md  pyproject.toml
exploration/: main.py  main_with_classes.py  start_remote_environment.py  train_agent.py  train_il_agent.py  train_q_learning_agent.py  train_rl_agent.py  train_sb3_agent.py
exploration/notebooks/: bonus_unit1.ipynb  course_unit1.ipynb  example.ipynb
src/rl_framework/: __init__.py  version.py
src/rl_framework/agent/: __init__.py  agent.py  async_stable_baselines.py  base_agent.py  custom_agent.py  q_learning.py  stable_baselines.py
src/rl_framework/agent/custom_algorithms/: __init__.py  base_algorithm.py  base_custom_algorithm.py  q_learning.py
src/rl_framework/agent/imitation/: __init__.py  episode_sequence.py  imitation.py  imitation_learning_agent.py
src/rl_framework/agent/imitation/imitation/: __init__.py  imitation.py  imitation_algorithm_wrappers.py
src/rl_framework/agent/reinforcement/: __init__.py  async_stable_baselines.py  custom_agent.py  reinforcement_learning_agent.py  stable_baselines.py
src/rl_framework/agent/reinforcement/custom_algorithms/: base_custom_algorithm.py  q_learning.py
src/rl_framework/algorithm/: __init__.py  agent.py  stable_baselines.py
src/rl_framework/environment/: __init__.py  base_environment.py  environment.py  gym_environment.py  mlagents_environment.py  remote_environment.py  remote_gym_environment.py  unity_environment.py
src/rl_framework/interaction_objects/: __init__.py  action.py  state.py
src/rl_framework/util/: __init__.py  evaluating.py  remote_environment_management.py  saving_and_loading.py  util.py  video_recording.py
src/rl_framework/util/saving_and_loading/: __init__.py  saving_and_loading.py
src/rl_framework/util/saving_and_loading/connector/: __init__.py  base_connector.py  clearml_connector.py  dummy_connector.py  hugging_face_connector.py
