[tool.poetry]
name = "rl-framework"
version = "0.1.0"
description = "An easy-to-read Reinforcement Learning (RL) framework. Provides standardized interfaces and implementations to various Reinforcement Learning methods and environments. Also this is the main place to start your journey with Reinforcement Learning and learn from tutorials and examples."
authors = ["Alexander Zap <alexander.zap@alexanderthamm.com>"]
license = "Proprietary"
packages = [
    { include = "rl_framework", from = "src" },
]
include = ["src/rl_framework/res/*"]

[tool.poetry.dependencies]
python = "^3.10"
setuptools = "^65.5.0"
stable-baselines3 = {extras = ["extra"], version = "*"}
box2d = "*"
box2d-kengz = "*"
gym = "0.24"
huggingface-sb3 = "*"
pickle5 = "*"
pyglet = "1.5.1"
pygame = "*"
numpy = "*"
pyyaml= "6.0"
imageio = "*"
imageio_ffmpeg = "*"
tqdm = "*"
huggingface_hub = "*"

[tool.poetry.dev-dependencies]
black = "^22.10"
pre-commit = "^2.20"
pytest = "^7.2"
pytest-cov = "^4.0"
jupyterlab = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = {}

# Same as Black.
line-length = 110

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10
