[tool.poetry]
name = "rl-framework"
version = "0.5.0"
description = "An easy-to-read Reinforcement Learning (RL) framework. Provides standardized interfaces and implementations to various Reinforcement Learning methods and environments. Also this is the main place to start your journey with Reinforcement Learning and learn from tutorials and examples."
authors = ["Alexander Zap"]
license = "Proprietary"
packages = [
    { include = "rl_framework", from = "src" },
]
include = ["src/rl_framework/res/*"]

[tool.poetry.dependencies]
python = ">=3.10.1,<=3.10.8"
numpy = "^1.26.3"
protobuf = "~3.20"
gymnasium = {extras = ["box2d"], version = "^0.28.1"}
stable-baselines3 = {extras = ["extra"], version = "^2.2"}
tqdm = "^4.66"
huggingface_hub = "^0.19"
imageio = "^2.33.0"
moviepy = "^1.0.3"
clearml = "^1.14.1"
dm-env-rpc = "^1.1.6"
remote-gym = { git = "https://github.com/alexander-zap/remote-gym" }
# mlagents_envs = { path = "../ml-agents/ml-agents-envs/", develop = true}

[tool.poetry.group.dev.dependencies]
black = "^23.11"
pre-commit = "^3.5"
pytest = "^7.2"
pytest-cov = "^4.0"
jupyterlab = "^4.0"
ruff = "^0.1.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Skip unused import rule.
extend-ignore = ["F401"]

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]
per-file-ignores = { }

# Same as Black.
line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.9.
target-version = "py39"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
